<resources>
    <string name="app_name">Kids Photo Viewer</string>

    <string name="title_activity_photos">Photos</string>
    <string name="title_activity_prefs">Preferences</string>

    <string name="activity_main_button_start">Start</string>
    <string name="activity_main_button_settings">Settings</string>

    <string name="pref_key_photos_provider">photos_provider</string>
    <string name="pref_label_photos_provider">Photos source</string>

    <string name="photo_provider_builtin">builtin_photos</string>
    <string name="photo_provider_builtin_label">Built-in photos</string>

    <string name="photo_provider_local">local_photos</string>
    <string name="photo_provider_local_label">Local photos</string>

    <string name="photo_provider_server">photo_server</string>
    <string name="photo_provider_server_label">Photo server</string>

    <string name="pref_key_shuffle_enable">shuffle_enable</string>
    <string name="pref_label_shuffle">Shuffle photos</string>

    <string name="pref_key_slideshow_enable">slideshow_enable</string>
    <string name="pref_label_slideshow_interval">Change photo every</string>

    <string name="pref_key_slideshow_interval">slideshow_interval</string>
    <string name="pref_label_slideshow_enable">Enable photos slideshow</string>

    <string name="error_view_main_message">Oops! There was an error :(</string>
    <string name="error_view_retry_button_text">Retry</string>

    <string name="error_local_photos_no_permission">Permission to access local photos not granted</string>

</resources>