<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/pref_key_photos_provider"
        android:title="@string/pref_label_photos_provider"
        android:entries="@array/photos_providers_labels"
        android:entryValues="@array/photos_providers_ids"
        android:defaultValue="@string/photo_provider_local"/>

    <SwitchPreferenceCompat
        android:key="@string/pref_key_slideshow_enable"
        android:title="@string/pref_label_slideshow_enable" />

    <SeekBarPreference
        android:key="@string/pref_key_slideshow_interval"
        android:title="@string/pref_label_slideshow_interval"
        android:dependency="@string/pref_key_slideshow_enable"
        android:min="3"
        android:max="15"
        android:defaultValue="5" />

</PreferenceScreen>